kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    prometheus.io/scrape: "true" # Określa, że Prometheus ma zbierać metryki z tej usługi
    prometheus.io/port: "5001" # Określa port, z którego Prometheus ma pobierać metryki
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5001
      targetPort: 5001
